# on-prem

./: .gitignore  .update.py  README.md  check.sh  metadata.json  pernosco  pyproject.toml
pernoscoshared/: sources.py  systemdebuginfo.py
src/pernosco_on_prem/: metadata.json  pernosco.py
src/pernosco_on_prem/pernoscoshared/: packaging.py  sources.py  systemdebuginfo.py
tests/: main.py
